ref:33344 fixes additional asterisk into ssn field

--- a/app/views/employers/census_employees/show.html.erb
+++ b/app/views/employers/census_employees/show.html.erb
@@ -224,6 +224,6 @@
 <script>
   $(document).on('ready page:load', function () {
     // FormHelpers.preventUnload();
-    FormHelpers.applyAsterisks();
+    // FormHelpers.applyAsterisks();
   });
 </script>
