--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -2,17 +2,11 @@
   <div class="row">
     <div class="checkbox-filter-wrapper">
       <% if !@hbx_enrollment.is_shop? %>
-      <!-- <h4>
-        <%= link_to l10n('estimate_your_costs'), "https://dc.checkbookhealth.org/hie/dc/#{@hbx_enrollment.coverage_year}/", target: '_blank' %>
-      </h4> -->
       <% end %>
       <h4>
         <%= find_my_doctor %>
-        <%=link_to "Estimate your cost" , "", data: {toggle: "modal", target: "#plan_match_redirection"} %>
+          <%=link_to "Estimate your cost" , "", data: {toggle: "modal", target: "#plan_match_redirection"} %>
         </br>
-        <% if plan_match_dc %>
-        <%= estimate_your_costs %>
-        <% end %>
       </h4>
     </div>
 
@@ -28,7 +22,7 @@
           </div>
           <div class="modal-footer" style="margin-right:190px">
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Close</button>
-            <%= submit_tag "Confirm", class: 'btn btn-primary  mtz' %>
+            <%=link_to "Confirm" , @dc_individual_checkbook_url, class: 'btn btn-primary  mtz' %>
           </div>
         </div>
       </div>
