refs: 33556 added titleize

--- a/app/views/notices/ivl/final_eligibility_notice_aqhp.html.erb
+++ b/app/views/notices/ivl/final_eligibility_notice_aqhp.html.erb
@@ -8,7 +8,7 @@
 <table class="total_table" border="0">
   <tbody>
     <tr>
-      <td><h3>YOUR ELIGIBILITY RESULTS, PLAN, AND OPTION TO CHANGE PLANS FOR <%= notice.coverage_year %></h3></td>
+      <td><h3>YOUR FINAL ELIGIBILITY RESULTS, PLAN, AND OPTION TO CHANGE PLANS FOR <%= notice.coverage_year %></h3></td>
     </tr>
   </tbody>
 </table>
