Refs #19392 fix specs

--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -22,7 +22,7 @@
           </div>
           <div class="modal-footer" style="margin-right:190px">
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Close</button>
-            <%=link_to "Confirm" , @dc_individual_checkbook_url, class: 'btn btn-primary  mtz' %>
+            <%=link_to "Confirm" , @dc_individual_checkbook_url, class: "btn btn-primary  mtz" %>
           </div>
        </div>
     </div>
