--- a/app/views/notices/shop_employee_notices/employee_select_plan_during_open_enrollment.html.erb
+++ b/app/views/notices/shop_employee_notices/employee_select_plan_during_open_enrollment.html.erb
@@ -1,7 +1,13 @@
 <%= render partial: 'notices/shared/cover_page', :locals => {notice: notice} %>
-<%= render partial: 'notices/shared/logo_and_address_shop' %>
+<%= render partial: 'notices/shared/logo_and_address_shop', :locals => {notice: notice} %>
 <%= render partial: 'notices/shared/shop_address', :locals => {notice: notice} %>
-<%= render partial: 'notices/shared/email_notification_sent_to', :locals => {email: notice.primary_email} %>
+<table class="total_table" border="0">
+  <tbody>
+    <tr>
+      <td><strong>Email notification sent to:</strong> <%= notice.primary_email %></td>
+    </tr>
+  </tbody>
+</table>
 <%= render partial: 'notices/shared/date', :locals => {notice: notice} %>
  <table class="total_table" border="0">
   <tbody>
