Refs #19392 rspec fix-CB

--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -11,6 +11,10 @@
           <%= link_to l10n("estimate_your_cost"), 'https://dc.checkbookhealth.org/sadpi/dc/2019/', target: '_blank' %>
         <% end %>
         </br>
+        <% if plan_match_dc %>
+        <%= estimate_your_costs %>
+        <% end %>
+      </br>
       </h4>
     </div>
 
