--- a/app/views/insured/families/find_sep.html.erb
+++ b/app/views/insured/families/find_sep.html.erb
@@ -50,13 +50,13 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <% if @market_kind == 'individual' && is_under_open_enrollment? %>
+        <% if @market_kind == ('individual' || 'coverall') && is_under_open_enrollment? %>
           <h4 class="modal-title"><%= l10n("insured.families.open_enrollment") %></h4>
         <% else %>
           <h4 class="modal-title"><%= l10n("insured.families.outside_open_enrollment") %></h4>
         <% end %>
       </div>
-      <% if @market_kind == 'individual' && is_under_open_enrollment? %>
+      <% if @market_kind == ('individual' || 'coverall') && is_under_open_enrollment? %>
         <div class="modal-body">
           <p><%= l10n("insured.families.final_sep_open_enrollment_body") %>.</p>
         </div>
