refs #37146 remove extra period

--- a/app/views/insured/families/find_sep.html.erb
+++ b/app/views/insured/families/find_sep.html.erb
@@ -58,7 +58,7 @@
       </div>
       <% if @market_kind == ('individual' || 'coverall') && is_under_open_enrollment? %>
         <div class="modal-body">
-          <p><%= l10n("insured.families.final_sep_open_enrollment_body") %>.</p>
+          <p><%= l10n("insured.families.final_sep_open_enrollment_body") %></p>
         </div>
       <% else %>
           <div class="modal-body">
