--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -26,8 +26,16 @@
            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
            <hr>
           </div> 
-          <div style="margin-left:20px;">
-            <p><%= l10n("modal_onscreen") %></p>
+          <div style="text-align: center;">
+            <p><%= l10n("modal_onscreen1") %></p>
+            <p><%= l10n("modal_onscreen2") %></p>
+            <p><%= l10n("modal_onscreen3") %></p>
+            <p><%= l10n("modal_onscreen4") %></p>
+            <p><%= l10n("modal_onscreen5") %></p>
+            <p><%= l10n("modal_onscreen6") %></p>
+            <p><%= l10n("modal_onscreen7") %></p>
+            <p><%= l10n("modal_onscreen8") %></p>
+            <p><%= l10n("modal_onscreen9") %></p>
           </div>
           <div class="modal-footer" style="margin-right:190px">
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
