Refs #19392 fix for find my doctor redirection modal-CB

--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -19,7 +19,7 @@
       </h4>
     </div>
 
-  <div class="modal fade" id="plan_match_redirection" tabindex="-1" role="dialog" role="document">
+   <div class="modal fade" id="plan_match_redirection" tabindex="-1" role="dialog" role="document">
     <div class="modal-dialog">
        <div class="modal-content">
           <div class="modal-header" style="border-bottom:none">
@@ -57,8 +57,16 @@
            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
            <hr>
           </div> 
-          <div style="margin-left:20px;">
-            <p><%= l10n("modal_onscreen") %></p>
+           <div style="text-align: center;">
+            <p><%= l10n("modal_onscreen1") %></p>
+            <p><%= l10n("modal_onscreen2") %></p>
+            <p><%= l10n("modal_onscreen3") %></p>
+            <p><%= l10n("modal_onscreen4") %></p>
+            <p><%= l10n("modal_onscreen5") %></p>
+            <p><%= l10n("modal_onscreen6") %></p>
+            <p><%= l10n("modal_onscreen7") %></p>
+            <p><%= l10n("modal_onscreen8") %></p>
+            <p><%= l10n("modal_onscreen9") %></p>
           </div>
           <div class="modal-footer" style="margin-right:190px">
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
