--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -26,7 +26,7 @@
            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
            <hr>
           </div> 
-          <div style="text-align: center;">
+          <div style="margin-left:20px;">
             <p><%= l10n("modal_onscreen1") %></p>
             <p><%= l10n("modal_onscreen2") %></p>
             <p><%= l10n("modal_onscreen3") %></p>
