--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -8,7 +8,7 @@
         <% if @market_kind == "individual" && @coverage_kind == "health" %>
           <%=link_to l10n("estimate_your_cost") , "", data: {toggle: "modal", target: "#plan_match_redirection"} %>
           <% elsif @market_kind == "individual" && @coverage_kind == "dental" %>
-          <%= link_to l10n("estimate_your_cost"), 'https://dc.checkbookhealth.org/sadpi/dc/2019/', target: '_blank' %>
+          <%= link_to l10n("estimate_your_cost"), '',data: {toggle: "modal", target: "#plan_match_dental_redirection"} %>
           <% # Staging url should be changed with PROD URL before going to production REDMINE #36809 %>
         <% end %>
         </br>
@@ -49,6 +49,32 @@
     </div>
   </div>
 
+
+  <div class="modal fade" id="plan_match_dental_redirection" tabindex="-1" role="dialog" role="document">
+    <div class="modal-dialog">
+       <div class="modal-content">
+          <div class="modal-header" style="border-bottom:none">
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+           <hr>
+          </div> 
+           <div style="text-align: center;">
+            <p><%= l10n("modal_onscreen1") %></p>
+            <p><%= l10n("modal_onscreen2") %></p>
+            <p><%= l10n("modal_onscreen3") %></p>
+            <p><%= l10n("modal_onscreen4") %></p>
+            <p><%= l10n("modal_onscreen5") %></p>
+            <p><%= l10n("modal_onscreen6") %></p>
+            <p><%= l10n("modal_onscreen7") %></p>
+            <p><%= l10n("modal_onscreen8") %></p>
+            <p><%= l10n("modal_onscreen9") %></p>
+          </div>
+          <div class="modal-footer" style="margin-right:190px">
+            <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
+            <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/sadpi/dc/2019/', class: "btn btn-primary  mtz", target: '_blank'  %>
+          </div>
+       </div>
+    </div>
+  </div>
 
   <div class="modal fade" id="plan_match_family" tabindex="-1" role="dialog" role="document">
     <div class="modal-dialog">
