--- a/app/views/shared/_my_portal_links.html.erb
+++ b/app/views/shared/_my_portal_links.html.erb
@@ -9,11 +9,26 @@
   <% if portal_count == 1 %>
     <span>
       <%= link_to l10n(".my_insured_portal"), family_account_path(tab: 'home'), class: 'header-text' if insured %>
-      <%= link_to "My Employer Portal", new_employers_employer_profile_path, class: 'header-text' if employer_staff.present? %>
-      <%= link_to "My Broker Agency Portal", broker_agencies_root_path, class: 'header-text' if broker %>
+      <%if employer_staff.present? %>
+      <a href="#" class="dropdown-toggle header-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Portals <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <% if current_user.hints == true %>
+          <li>
+            <i class="fa fa-question-circle fa-3x text-center" aria-hidden="true" style="display: block;"></i>
+            <h3 class="darkblue no-buffer text-center">Did You Know?</h3>
+              <div class="panel panel-default">
+                <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
+              </div>
+          </li>
+          <li><a href="#" class='header-text'> Add Employee Role</a></li>
+        <% end %>
+      </ul>
+     <% end %>
+     <%= link_to l10n('.my_broker_agency_portal'), benefit_sponsors.new_profiles_registration_path(:profile_type => :broker_agency), class: 'header-text' if broker %>
       <span> | </span>
     </span>
-    <%elsif portal_count > 1 %>
+    <% end %>
+    <%if portal_count > 1 %>
     <span>
       <a href="#" class="dropdown-toggle header-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Portals <span class="caret"></span></a>
       <ul class="dropdown-menu">
@@ -28,6 +43,7 @@
         <% end %>
         <% if insured %>
           <li><%= link_to "My Insured Portal", family_account_path(tab: 'home'), class: 'header-text' %></li>
+          <li><a href="#" class='header-text'> Add Employee Role</a></li>
         <% end %>
         <% employer_staff.each do |employer_staff_role|  %>
           <% id = employer_staff_role.employer_profile_id %>
