Refs: 21355, Added required check for AQHP Subject line, IVL_FRE

--- a/app/views/notices/ivl/final_eligibility_notice_uqhp_aqhp.html.erb
+++ b/app/views/notices/ivl/final_eligibility_notice_uqhp_aqhp.html.erb
@@ -36,7 +36,7 @@
     </table>
 <% end %>
 
-<% if notice.renewal_health_enrollments.present? && notice.renewal_dental_enrollments.present?  %>
+<% if notice.aqhp_individuals.present? && notice.renewal_health_enrollments.present? && notice.renewal_dental_enrollments.present?  %>
     <table class="total_table" border="0">
       <tbody>
       <tr>
@@ -52,7 +52,7 @@
       </tr>
       </tbody>
     </table>
-<% elsif notice.renewal_health_enrollments.present?  %>
+<% elsif notice.aqhp_individuals.present? && notice.renewal_health_enrollments.present?  %>
     <table class="total_table" border="0">
       <tbody>
       <tr>
