--- a/app/views/shared/_my_portal_links.html.erb
+++ b/app/views/shared/_my_portal_links.html.erb
@@ -20,7 +20,8 @@
                 <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
               </div>
           </li>
-          <li><a href="#" class='header-text'> Add Employee Role</a></li>
+          <!-- <li><a href="#" class='header-text'> Add Employee Role</a></li> -->
+          <li><%= link_to "Add Employee Role", search_insured_employee_index_path, class: 'header-text'%></li>
         <% end %>
       </ul>
      <% end %>
@@ -43,7 +44,8 @@
         <% end %>
         <% if insured %>
           <li><%= link_to "My Insured Portal", family_account_path(tab: 'home'), class: 'header-text' %></li>
-          <li><a href="#" class='header-text'> Add Employee Role</a></li>
+          <!-- <li><a href="#" class='header-text'> Add Employee Role</a></li> -->
+          <li><% link_to "Add Employee Role", search_insured_employee_index_path, class: 'header-text' %></li>
         <% end %>
         <% employer_staff.each do |employer_staff_role|  %>
           <% id = employer_staff_role.employer_profile_id %>
