Added alert message for termination reason

--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -15,7 +15,7 @@ var termReason = "";
 
 if ( $parent_row.next().hasClass('child-row') ) {
 //
-} 
+}
 else {
   $parent_row.after('<tr class="child-row"><td colspan="100"><%= j render "index"%></td></tr>');
   $("li>a:contains('Collapse Form')").eq(containing_row.index()).removeClass('disabled');
@@ -81,7 +81,7 @@ var inputsChecked = false;
 
 function validateFormat(element, pyStartOn, pyEndOn) {
   pyEndDate = element.value;
-  
+
   setTimeout(function() {
     if (element.value.length != 10 || element.value.indexOf("/") != 2) {
       element.value = "";
@@ -179,6 +179,16 @@ function validateTermActions() {
   }
 }
 
+(function() {
+  $('input.py-end-date').click(function() {
+    if (!inputsChecked) {
+      alert('Please select termination reason');
+      $(this).val('');
+      $('#ui-datepicker-div').hide();
+    }
+  })
+})();
+
 function pyAction(action, id, employer_id, term_date, start_on) {
   applicationId = id;
   employerId = employer_id
@@ -192,13 +202,13 @@ function pyAction(action, id, employer_id, term_date, start_on) {
     hideTerminationRadios();
     enableSubmitButton()
   }
-  
+
   if (action == 'terminate') {
     showTerminationRadios();
     clearDatePickerValue();
     disableSubmitButton();
   }
-  
+
   if (action == 'cancel') {
     hideEndDateField(pyStartDate, applicationId);
     hideTerminationRadios();
@@ -206,7 +216,7 @@ function pyAction(action, id, employer_id, term_date, start_on) {
   }
   // Clears all end dates from previous rows
   var endDates = document.querySelectorAll('.py-end-date');
-  
+
   for (date of endDates) {
     date.value = "";
   }
