--- a/app/views/shared/_my_portal_links.html.erb
+++ b/app/views/shared/_my_portal_links.html.erb
@@ -1,61 +1,46 @@
 <% insured = (current_user.try(:has_consumer_role?) && current_user.identity_verified_date.nil? == false) || current_user.try(:has_employee_role?) %>
 <% employer_staff =  (current_user.person && current_user.person.active_employer_staff_roles) || []%>
 <% employer = employer_staff.first %>
+<% general_agency = current_user.try(:has_general_agency_staff_role?) %>
 <% broker =  current_user.try(:has_broker_agency_staff_role?) %>
 <% roles = [insured, broker] %>
 <% portal_count = roles.select{|role|role}.count + employer_staff.count%>
 
-
-  <% if portal_count == 1 %>
-    <span>
-      <%= link_to l10n(".my_insured_portal"), family_account_path(tab: 'home'), class: 'header-text' if insured %>
-      <%if employer_staff.present? %>
-      <a href="#" class="dropdown-toggle header-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Portals <span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <% if current_user.hints == true %>
-          <li>
-            <i class="fa fa-question-circle fa-3x text-center" aria-hidden="true" style="display: block;"></i>
-            <h3 class="darkblue no-buffer text-center">Did You Know?</h3>
-              <div class="panel panel-default">
-                <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
-              </div>
-          </li>
-          <!-- <li><a href="#" class='header-text'> Add Employee Role</a></li> -->
-          <li><%= link_to "Add Employee Role", search_insured_employee_index_path, class: 'header-text'%></li>
-        <% end %>
-      </ul>
-     <% end %>
-     <%= link_to l10n('.my_broker_agency_portal'), benefit_sponsors.new_profiles_registration_path(:profile_type => :broker_agency), class: 'header-text' if broker %>
-      <span> | </span>
-    </span>
-    <% end %>
-    <%if portal_count > 1 %>
-    <span>
-      <a href="#" class="dropdown-toggle header-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Portals <span class="caret"></span></a>
-      <ul class="dropdown-menu">
-        <% if current_user.hints == true %>
-          <li>
-            <i class="fa fa-question-circle fa-3x text-center" aria-hidden="true" style="display: block;"></i>
-            <h3 class="darkblue no-buffer text-center">Did You Know?</h3>
-              <div class="panel panel-default">
-                <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
-              </div>
-          </li>
-        <% end %>
-        <% if insured %>
-          <li><%= link_to "My Insured Portal", family_account_path(tab: 'home'), class: 'header-text' %></li>
-          <!-- <li><a href="#" class='header-text'> Add Employee Role</a></li> -->
-          <li><% link_to "Add Employee Role", search_insured_employee_index_path, class: 'header-text' %></li>
-        <% end %>
+<% unless current_user.try(:has_hbx_staff_role?) %>
+  <span>
+    <a href="#" class="dropdown-toggle header-text" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Portals <span class="caret"></span></a>
+    <ul class="dropdown-menu">
+      <% if current_user.hints == true %>
+        <li>
+          <i class="fa fa-question-circle fa-3x text-center" aria-hidden="true" style="display: block;"></i>
+          <h3 class="darkblue no-buffer text-center">Did You Know?</h3>
+            <div class="panel panel-default">
+              <div class="panel-body">You can move between your insured, employer, broker accounts using this My Portals link.</div>
+            </div>
+        </li>
+      <% end %>
+      <% if insured %>
+        <li><%= link_to "My Insured Portal", family_account_path(tab: 'home'), class: 'header-text' %></li>
+        <li><%= link_to "Add Consumer Role", build_insured_consumer_role_index_path, method: :post, class: 'header-text' unless current_user.try(:has_consumer_role?)%></li>
+      <% end %>
+      <% if employer_staff.present? %>
+        <li><%= link_to "Add Employee Role", search_insured_employee_index_path, class: 'header-text' if portal_count == 1 %></li>
+        <li><%= link_to "Add Consumer Role", search_insured_consumer_role_index_path, class: 'header-text' if portal_count == 1%></li>
         <% employer_staff.each do |employer_staff_role|  %>
           <% id = employer_staff_role.employer_profile_id %>
             <% employer = EmployerProfile.find(id) %>
             <li><%= link_to employer.legal_name, employers_employer_profile_path(employer, tab: 'home'), class: 'header-text' %></li>
         <% end %>
-        <% if broker %>
-          <li><%= link_to "My Broker Agency Portal", broker_agencies_root_path, class: 'header-text' %></li>
-        <% end %>
-      </ul>
-      <span> | </span>
-    </span>
-  <% end %>
+      <% end %>
+      <% if broker %>
+        <li><%= link_to "My Broker Agency Portal", broker_agencies_root_path, class: 'header-text' %></li>
+        <li><%= link_to "Add Consumer Role", search_insured_consumer_role_index_path, class: 'header-text' if portal_count == 1 %></li>
+      <% end %>
+      <% if general_agency %>
+        <li><%= link_to "My General Agency Portal", general_agencies_root_path, class: 'header-text' %></li>
+        <li><%= link_to "Add Consumer Role", search_insured_consumer_role_index_path, class: 'header-text' unless portal_count == 1%></li>
+      <% end %>
+    </ul>
+    <span> | </span>
+  </span>
+<% end %>
